<resources>
    <string name="app_name">TestApp</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in_here">Sign Up from here</string>
    <string name="dont_have_acc">Dont\'t you have an account?</string>
</resources>